<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">叽喳</string>
    <string name="chat">聊天</string>
    <string name="contact">联系人</string>
    <string name="friend_new">新的好友</string>
    <string name="friend_add">添加好友</string>
    <string name="friend_daniu">技术大牛</string>
    <string name="friend_ask_you_be">请求添加您为好友</string>
    <string name="friend_find_from_contact">从通讯录中添加</string>
    <string name="friend_find_from_qq">从QQ好友中添加</string>
    <string name="friend_find_from_scan">扫描二维码添加</string>
    <string name="moment">动态</string>
    <string name="mine">我的</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="searching">正在搜索...</string>
    <string name="add">添加</string>
    <string name="more">更多</string>
    <string name="sys_setting">系统设置</string>
    <string name="confirm">确定</string>
    <string name="from">来自</string>
    <string name="planet">外星球</string>
    <string name="age">年龄</string>
    <string name="job">职业</string>
    <string name="company">公司</string>
    <string name="hobby">爱好</string>
    <string name="msgtosomeone">私聊TA</string>
    <string name="profile">好友资料</string>
    <string name="about_us">关于我们</string>
    <string name="login">登 陆</string>
    <string name="register">注 册</string>
    <string name="complete_register">完成注册</string>
    <string name="userName">请输入用户名</string>
    <string name="passWord">请输入密码</string>
    <string name="logining">正在登陆</string>
    <string name="login_fail">登陆失败</string>
    <string name="logout">退出登录</string>
    <string name="send">发送</string>
    <string name="sending">正在发送...</string>
    <string name="send_fail">发送失败</string>
    <string name="send_success">发送成功</string>
    <string name="close">关闭</string>
    <string name="agree">同意</string>
    <string name="who_i_am">我是...</string>
    <string name="say_something_to">对TA说点什么吧</string>
    <string name="accepted">已同意</string>
    <string name="refused">已拒绝</string>
    <string name="empty_msg">暂无消息</string>
    <string name="empty_friend">暂无联系人</string>
    <string name="empty_result">搜索结果为空</string>
    <string name="error_result">搜索出现错误</string>
    <string name="no_internet">暂时无网络，请检查设置</string>
    <string name="server_error">连接服务器出错</string>
    <string name="network_error">连接网络出错</string>
    <string name="resourse_error">资源找不到</string>
    <string name="hint_login_email">使用邮箱登陆</string>
    <string name="hint_register_email">使用邮箱注册</string>
    <string name="hint_login_pwd">输入登陆密码</string>
    <string name="hint_register_pwd">输入注册密码</string>
    <string name="hint_sure_register_pwd">确认注册密码</string>
    <string name="connectioning">正在连接服务器...</string>
    <string name="loading">正在加载...</string>
    <string name="load_fail">加载信息失败</string>
    <string name="copyright">Copyright @ 2015 1451783859@qq.com All rights reserved</string>
    <string name="logout_confirm">确定退出登陆吗?</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="auth_error">认证过期，请重新认证</string>
    <string name="title_activity_profile">详细信息</string>
    <string name="title_activity_chat">聊天</string>
    <string name="title_activity_friend_search">好友搜索</string>
    <string name="search_friends">请输入关键字搜索</string>
    <string name="title_activity_friend_search_result">好友搜索结果</string>
    <string name="title_activity_request_msg">添加好友请求列表</string>

    <string name="title_activity_register">注册用户</string>
    <string name="now_activity_register">正在注册...请稍后</string>

</resources>
