<?xml version="1.0" encoding="utf-8"?>
<!--登陆界面显示-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical"
              android:padding="@dimen/basicPaddingSize">

    <!--自定义的文本框，输入账号-->
    <com.example.sony.jizha.Widget.ClearEditText
        android:id="@+id/etxtEmail"
        style="@style/editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/icon_reg_name"
        android:drawablePadding="10dp"
        android:hint="@string/hint_login_email"/>

    <!--自定义的文本框，输入密码-->
    <com.example.sony.jizha.Widget.ClearEditText

        android:id="@+id/etxtPwd"
        style="@style/editText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/icon_reg_password"
        android:drawablePadding="10dp"
        android:hint="@string/hint_login_pwd"
        android:inputType="textPassword"/>

    <!--登陆按钮-->
    <Button
        android:id="@+id/btnLogin"
        style="@style/bigGreenButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="login"
        android:text="@string/login"/>

    <!--页面底部展示信息-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="使用叽喳账号登陆，如无账号，请联系1451783859@qq.com"/>

</LinearLayout>