<?xml version="1.0" encoding="utf-8"?>
<!--好友请求对话框-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/basicPaddingSize">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dialog_common"
        android:orientation="vertical"
        android:padding="20dp">

        <!--文本框，输入请求信息-->
        <EditText
            android:id="@+id/etxtMsg"
            style="@style/editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/who_i_am"/>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <!--取消按钮-->
            <Button
                android:id="@+id/btnCancel"
                style="@style/bigRedButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close"/>

            <!--发送按钮-->
            <Button
                android:id="@+id/btnYes"
                style="@style/bigGreenButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:text="@string/send"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>