<?xml version="1.0" encoding="utf-8"?>
<!--详细信息布局-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              style="@style/layout">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <!--头像-->
        <ImageView
            android:id="@id/imageviewHead"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/default_head"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">
            <!--会员名-->
            <TextView
                android:id="@id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/text_title"
                android:textSize="18sp"/>
            <!--账号-->
            <TextView
                android:id="@id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text_normal"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_list_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <!--来自-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:singleLine="true"
            android:text="@string/from"
            android:textColor="@color/text_normal"
            android:textSize="14sp"/>

        <!--显示地址-->
        <TextView
            android:id="@+id/txtFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_title"
            android:textSize="14sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/selector_list_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <!--年龄-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:singleLine="true"
            android:text="@string/age"
            android:textColor="@color/text_normal"
            android:textSize="14sp"/>
        <!--显示年龄-->
        <TextView
            android:id="@+id/txtAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_title"
            android:textSize="14sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/selector_list_item"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <!--公司-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:singleLine="true"
            android:text="@string/company"
            android:textColor="@color/text_normal"
            android:textSize="14sp"/>

        <!--显示公司-->
        <TextView
            android:id="@+id/txtCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_title"
            android:textSize="14sp"/>

    </LinearLayout>

    <!--发信息按钮-->
    <Button
        android:id="@id/btnMsgAt"
        style="@style/bigGreenButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="msgAt"
        android:text="@string/msgtosomeone"/>

    <!--添加好友-->
    <Button
        android:id="@+id/btnRequest"
        style="@style/bigGreenButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="requestClick"
        android:text="@string/friend_add"
        android:visibility="gone"/>
</LinearLayout>