<?xml version="1.0" encoding="utf-8"?>
<!--更多页面布局-->
<LinearLayout
    style="@style/layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_list_item"
        android:padding="10dp">

        <!--头像-->
        <ImageView
            android:id="@id/imageviewHead"
            android:layout_width="50dp"
            android:layout_height="50dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <!--姓名-->
            <TextView
                android:id="@id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="@color/text_title"
                android:textSize="18sp"/>

            <!--账号-->
            <TextView
                android:id="@id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/text_normal"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>


    <!--系统设置-->
    <RelativeLayout
        android:id="@+id/viewSetting"
        style="@style/prf_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="viewSetting"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_more_setting"/>


        <TextView
            style="@style/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageSetting"
            android:text="@string/sys_setting"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_arror_right"/>
    </RelativeLayout>

    <!--关于我们-->
    <RelativeLayout
        android:id="@+id/viewAboutus"
        style="@style/prf_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="viewAboutus"
        android:layout_marginTop="1dp">

        <ImageView
            android:id="@+id/imageAboutUS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_more_about_us"/>


        <TextView
            style="@style/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/imageAboutUS"
            android:text="@string/about_us"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_arror_right"/>
    </RelativeLayout>

    <!--退出登录按钮-->
    <Button
        android:id="@+id/btnLogout"
        style="@style/bigRedButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/logout"/>

</LinearLayout>